[gd_scene load_steps=11 format=4 uid="uid://cb6vh3470sj4i"]

[ext_resource type="Script" uid="uid://c71uspgdn0p0c" path="res://worldmap.gd" id="1"]
[ext_resource type="Texture2D" uid="uid://qjg4gx2nqeh0" path="res://worldmap.png" id="2"]
[ext_resource type="FontFile" uid="uid://cvvi6o8v4r7dh" path="res://ariblk.ttf" id="3"]
[ext_resource type="AudioStream" uid="uid://daax0sm4wiefg" path="res://uihover.wav" id="4"]
[ext_resource type="AudioStream" uid="uid://dh6pm2jo1420s" path="res://uipress.wav" id="5"]
[ext_resource type="AudioStream" uid="uid://chbwgwjhw1tmf" path="res://uirelease.wav" id="6"]
[ext_resource type="Texture2D" uid="uid://ciby07ecbmnm2" path="res://yes.png" id="7"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_2e73p"]

[sub_resource type="Theme" id="Theme_w4oin"]
default_font = ExtResource("3")
Button/colors/font_color = Color(0, 0, 0, 1)
Button/colors/font_disabled_color = Color(0.875, 0.875, 0.875, 0.5)
Button/colors/font_focus_color = Color(0, 0, 0, 1)
Button/colors/font_hover_color = Color(0, 0.545924, 0.934453, 1)
Button/colors/font_hover_pressed_color = Color(0.0536234, 0, 0.872918, 1)
Button/colors/font_outline_color = Color(0, 0, 0, 1)
Button/colors/font_pressed_color = Color(0.160392, 0.185003, 1, 1)
Button/font_sizes/font_size = 12
Button/fonts/font = ExtResource("3")
Panel/styles/panel = SubResource("StyleBoxEmpty_2e73p")

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_4g60y"]

[node name="Node2D" type="Node2D"]
script = ExtResource("1")

[node name="Worldmap" type="Sprite2D" parent="."]
position = Vector2(320, 240)
texture = ExtResource("2")

[node name="swe" type="Button" parent="Worldmap"]
offset_left = -104.0
offset_top = -144.0
offset_right = -24.0
offset_bottom = -126.0
scale = Vector2(1.76892, 1.76892)
theme = SubResource("Theme_w4oin")
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_focus_color = Color(1, 1, 1, 1)
theme_override_constants/outline_size = 2
theme_override_fonts/font = ExtResource("3")
theme_override_font_sizes/font_size = 12
theme_override_styles/focus = SubResource("StyleBoxEmpty_4g60y")
theme_override_styles/disabled_mirrored = SubResource("StyleBoxEmpty_4g60y")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_4g60y")
theme_override_styles/hover_pressed_mirrored = SubResource("StyleBoxEmpty_4g60y")
theme_override_styles/hover_pressed = SubResource("StyleBoxEmpty_4g60y")
theme_override_styles/hover_mirrored = SubResource("StyleBoxEmpty_4g60y")
theme_override_styles/hover = SubResource("StyleBoxEmpty_4g60y")
theme_override_styles/pressed_mirrored = SubResource("StyleBoxEmpty_4g60y")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_4g60y")
theme_override_styles/normal_mirrored = SubResource("StyleBoxEmpty_4g60y")
theme_override_styles/normal = SubResource("StyleBoxEmpty_4g60y")
disabled = true
text = "Sweden"
alignment = 0
metadata/_edit_use_anchors_ = true

[node name="ire" type="Button" parent="Worldmap"]
offset_left = -304.0
offset_top = -48.0
offset_right = -224.0
offset_bottom = -30.0
scale = Vector2(1.76892, 1.76892)
theme = SubResource("Theme_w4oin")
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_focus_color = Color(1, 1, 1, 1)
theme_override_constants/outline_size = 2
theme_override_fonts/font = ExtResource("3")
theme_override_font_sizes/font_size = 12
theme_override_styles/focus = SubResource("StyleBoxEmpty_4g60y")
theme_override_styles/disabled_mirrored = SubResource("StyleBoxEmpty_4g60y")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_4g60y")
theme_override_styles/hover_pressed_mirrored = SubResource("StyleBoxEmpty_4g60y")
theme_override_styles/hover_pressed = SubResource("StyleBoxEmpty_4g60y")
theme_override_styles/hover_mirrored = SubResource("StyleBoxEmpty_4g60y")
theme_override_styles/hover = SubResource("StyleBoxEmpty_4g60y")
theme_override_styles/pressed_mirrored = SubResource("StyleBoxEmpty_4g60y")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_4g60y")
theme_override_styles/normal_mirrored = SubResource("StyleBoxEmpty_4g60y")
theme_override_styles/normal = SubResource("StyleBoxEmpty_4g60y")
disabled = true
text = "Ireland"
alignment = 0
metadata/_edit_use_anchors_ = true

[node name="egy" type="Button" parent="Worldmap"]
offset_left = -24.0
offset_top = 160.0
offset_right = 56.0
offset_bottom = 178.0
scale = Vector2(1.76892, 1.76892)
theme = SubResource("Theme_w4oin")
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_focus_color = Color(1, 1, 1, 1)
theme_override_constants/outline_size = 2
theme_override_fonts/font = ExtResource("3")
theme_override_font_sizes/font_size = 12
theme_override_styles/focus = SubResource("StyleBoxEmpty_4g60y")
theme_override_styles/disabled_mirrored = SubResource("StyleBoxEmpty_4g60y")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_4g60y")
theme_override_styles/hover_pressed_mirrored = SubResource("StyleBoxEmpty_4g60y")
theme_override_styles/hover_pressed = SubResource("StyleBoxEmpty_4g60y")
theme_override_styles/hover_mirrored = SubResource("StyleBoxEmpty_4g60y")
theme_override_styles/hover = SubResource("StyleBoxEmpty_4g60y")
theme_override_styles/pressed_mirrored = SubResource("StyleBoxEmpty_4g60y")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_4g60y")
theme_override_styles/normal_mirrored = SubResource("StyleBoxEmpty_4g60y")
theme_override_styles/normal = SubResource("StyleBoxEmpty_4g60y")
disabled = true
text = "Egypt"
alignment = 0
metadata/_edit_use_anchors_ = true

[node name="return" type="Button" parent="Worldmap"]
offset_left = -304.0
offset_top = 208.0
offset_right = -173.0
offset_bottom = 226.0
scale = Vector2(1.20892, 1.20892)
theme = SubResource("Theme_w4oin")
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_focus_color = Color(1, 1, 1, 1)
theme_override_constants/outline_size = 2
theme_override_fonts/font = ExtResource("3")
theme_override_font_sizes/font_size = 12
theme_override_styles/focus = SubResource("StyleBoxEmpty_4g60y")
theme_override_styles/disabled_mirrored = SubResource("StyleBoxEmpty_4g60y")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_4g60y")
theme_override_styles/hover_pressed_mirrored = SubResource("StyleBoxEmpty_4g60y")
theme_override_styles/hover_pressed = SubResource("StyleBoxEmpty_4g60y")
theme_override_styles/hover_mirrored = SubResource("StyleBoxEmpty_4g60y")
theme_override_styles/hover = SubResource("StyleBoxEmpty_4g60y")
theme_override_styles/pressed_mirrored = SubResource("StyleBoxEmpty_4g60y")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_4g60y")
theme_override_styles/normal_mirrored = SubResource("StyleBoxEmpty_4g60y")
theme_override_styles/normal = SubResource("StyleBoxEmpty_4g60y")
text = "Back to main menu"
alignment = 0
metadata/_edit_use_anchors_ = true

[node name="return2" type="Button" parent="Worldmap"]
offset_left = 200.0
offset_top = 208.0
offset_right = 331.0
offset_bottom = 226.0
scale = Vector2(1.20892, 1.20892)
theme = SubResource("Theme_w4oin")
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_focus_color = Color(1, 1, 1, 1)
theme_override_constants/outline_size = 2
theme_override_fonts/font = ExtResource("3")
theme_override_font_sizes/font_size = 12
theme_override_styles/focus = SubResource("StyleBoxEmpty_4g60y")
theme_override_styles/disabled_mirrored = SubResource("StyleBoxEmpty_4g60y")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_4g60y")
theme_override_styles/hover_pressed_mirrored = SubResource("StyleBoxEmpty_4g60y")
theme_override_styles/hover_pressed = SubResource("StyleBoxEmpty_4g60y")
theme_override_styles/hover_mirrored = SubResource("StyleBoxEmpty_4g60y")
theme_override_styles/hover = SubResource("StyleBoxEmpty_4g60y")
theme_override_styles/pressed_mirrored = SubResource("StyleBoxEmpty_4g60y")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_4g60y")
theme_override_styles/normal_mirrored = SubResource("StyleBoxEmpty_4g60y")
theme_override_styles/normal = SubResource("StyleBoxEmpty_4g60y")
text = "Trophy Room"
alignment = 0
metadata/_edit_use_anchors_ = true

[node name="Uihover" type="AudioStreamPlayer" parent="Worldmap"]
stream = ExtResource("4")
volume_db = -10.0
mix_target = 2
max_polyphony = 6

[node name="Uipress" type="AudioStreamPlayer" parent="Worldmap"]
stream = ExtResource("5")
volume_db = -10.0
mix_target = 2

[node name="Uirelease" type="AudioStreamPlayer" parent="Worldmap"]
stream = ExtResource("6")
volume_db = -10.0
mix_target = 2

[node name="Yes" type="Sprite2D" parent="Worldmap"]
visible = false
position = Vector2(-208, -32)
texture = ExtResource("7")

[node name="Yes2" type="Sprite2D" parent="Worldmap"]
visible = false
position = Vector2(72, 176)
texture = ExtResource("7")

[node name="Yes3" type="Sprite2D" parent="Worldmap"]
visible = false
position = Vector2(8, -128)
texture = ExtResource("7")

[connection signal="button_down" from="Worldmap/swe" to="." method="_on_swe_button_down"]
[connection signal="mouse_entered" from="Worldmap/swe" to="." method="_on_swe_mouse_entered"]
[connection signal="pressed" from="Worldmap/swe" to="." method="_on_swe_pressed"]
[connection signal="button_down" from="Worldmap/ire" to="." method="_on_ire_button_down"]
[connection signal="mouse_entered" from="Worldmap/ire" to="." method="_on_ire_mouse_entered"]
[connection signal="pressed" from="Worldmap/ire" to="." method="_on_ire_pressed"]
[connection signal="button_down" from="Worldmap/egy" to="." method="_on_egy_button_down"]
[connection signal="mouse_entered" from="Worldmap/egy" to="." method="_on_egy_mouse_entered"]
[connection signal="pressed" from="Worldmap/egy" to="." method="_on_egy_pressed"]
[connection signal="button_down" from="Worldmap/return" to="." method="_on_return_button_down"]
[connection signal="mouse_entered" from="Worldmap/return" to="." method="_on_return_mouse_entered"]
[connection signal="pressed" from="Worldmap/return" to="." method="_on_return_pressed"]
[connection signal="button_down" from="Worldmap/return2" to="." method="_on_return_2_button_down"]
[connection signal="mouse_entered" from="Worldmap/return2" to="." method="_on_return_2_mouse_entered"]
[connection signal="pressed" from="Worldmap/return2" to="." method="_on_return_2_pressed"]
